--- a/yote_root/html/yote/admin.html
+++ b/yote_root/html/yote/admin.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yote Admin Page (YAP)</title>
 
-    <script src="/yote/js"></script>
+    <script src="/yote/JS"></script>
 
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
@@ -14,51 +14,52 @@
     <STYLE>
       .mainpanel { top:0px; width:900px; display:inline-block; }
       .tabs {
-	  position: relative;
-	  min-height: 300px; /* This part sucks */
-	  clear: both;
-	  margin: 25px 0;
+	      position: relative;
+	      min-height: 300px; /* This part sucks */
+	      clear: both;
+	      margin: 25px 0;
       }
       .tab {
-	  float: left;
+	      float: left;
       }
       .tab label {
-	  background: #eee;
-	  padding: 10px;
-	  border: 1px solid #ccc;
-	  margin-left: -1px;
-	  position: relative;
-	  left: 1px;
+	      background: #eee;
+	      padding: 10px;
+	      border: 1px solid #ccc;
+	      margin-left: -1px;
+	      position: relative;
+	      left: 1px;
       }
       .tab [type=radio] {
-	  display: none;
+	      display: none;
       }
       .content {
-	  position: absolute;
-	  top: 28px;
-	  left: 0;
-	  background: white;
-	  right: 0;
-	  bottom: 0;
-	  padding: 20px;
-	  border: 1px solid #ccc;
+	      position: absolute;
+	      top: 28px;
+	      left: 0;
+	      background: white;
+	      right: 0;
+	      bottom: 0;
+	      padding: 20px;
+	      border: 1px solid #ccc;
       }
       [type=radio]:checked ~ label {
-	  background: white;
-	  border-bottom: 1px solid white;
-	  z-index: 2;
+	      background: white;
+	      border-bottom: 1px solid white;
+	      z-index: 2;
       }
       [type=radio]:checked ~ label ~ .content {
-	  z-index: 1;
+	      z-index: 1;
       }
-      .apppanel { margin-left: 150px; }
-     border:none;
-     padding:0!important;
-    /*border is optional*/
-     border-bottom:1px solid #444; ; }
+      .apppanel {
+          margin-left: 150px;
+          border:none;
+          padding:0!important;
+          /*border is optional*/
+          border-bottom:1px solid #444;
+      }
       ._ct_row { vertical-align: top }
       ._ct_cell { border: 6px rgb(120,226,165) groove }
-
 
       tr { vertical-align: top }
     </STYLE>
@@ -81,6 +82,9 @@ if we are our experiences then we are both sides of them.
 	      $.yote.templates.import_templates( '/templates/default_templates.html' );
 	      $.yote.templates.import_templates( '/templates/yote_templates.html' );
 	      $.yote.init(  );
+$.yote.debug = true;
+          $.yote.fetch_root().admin_prefetch();
+$.yote.debug = false;
 	      $.yote.templates.init();
 	      $.yote.templates.refresh();
       });
@@ -89,12 +93,19 @@ if we are our experiences then we are both sides of them.
 
 
 <script type="text/template" class="yote_template_definition" template_name="Entry_Repeat">
+  <??? 
+    ctx.vars.repeats = $.yote.wrap_list( { 
+           array : 'repeats',
+           obj   : ctx.vars._,
+           ctx   : ctx
+        } );
+    ???>
   <table border=1><tr>  <th>Interval (mins)</th>     <th>Infinite Repeat</th>   <th>Repeats</th>
                         <th>Delete</th>
                   </tr>
-      <@ Cron_Repeat_Row _@repeats 2 @>
+      <$$ listpaginate Cron_Repeat_Row repeats $$>
   </table>
-  <$$ Paginator _@repeats $$>
+  <$$ Paginator repeats $$>
   <$$$ newrep <button type="button">add repeat</button> $$$>
     <?
         $( ctx.controls.newrep ).click( function() {
@@ -131,10 +142,17 @@ if we are our experiences then we are both sides of them.
 
 
   <script type="text/template" class="yote_template_definition" template_name="Attached_Objects">
+    <??? 
+       ctx.vars.attached_objects = $.yote.wrap_hash( { 
+           hash  : 'attached_objects',
+           obj   : ctx.vars._,
+           ctx   : ctx
+       } );
+    ???>
     <table> <TR> <TH>Object Name</TH> <TH>Class</TH> <TH>Remove</TH> </TR>
-      <% Attached_Obj_Row _%attached_objects 10 %>
+      <$$ hashpaginate Attached_Obj_Row attached_objects $$>
     </table>
-    <$$ Paginator _%attached_objects $$>
+    <$$ Paginator attached_objects $$>
     <$$ Add_Attached $$>
   </script>
 
@@ -180,12 +198,6 @@ if we are our experiences then we are both sides of them.
     ?>
   </script>
 
-  <script type="text/template" class="yote_template_definition" template_name="Attached_ObjTab">
-    <table> <TR> <TH>Object Name</TH> <TH>Class</TH> <TH>Remove</TH> </TR>
-      <% Attached_Obj_Row 10 %>
-    </table>    
-  </script>
-
   <script type="text/template" class="yote_template_definition" template_name="Email_Settings">
     <table>
       <tr> <td><nobr>Email Validation Required</nobr> </td> <td> <$$ checkbox _ requires_validation $$> </td> </tr>
@@ -199,6 +211,14 @@ if we are our experiences then we are both sides of them.
   <!-- ------------------------------ -->
 
   <script type="text/template" class="yote_template_definition" template_name="Users">
+   <??? 
+      ctx.vars.handles = $.yote.wrap_hash( { 
+             hash  : '_handles',
+             obj   : ctx._app_,
+             ctx   : ctx
+          } );
+    ???>
+
     <a NAME="Users">
       <h3>Users</h3>
       <table border=1><tr>  
@@ -208,9 +228,9 @@ if we are our experiences then we are both sides of them.
           <th>Was Validated</th>
           <th>Reset Password</th>
         </tr>
-        <% User_Row _app_%_handles 1 %>
+        <$$ hashpaginate User_Row handles $$>
       </table>
-      <$$ Paginator _app_%_handles $$> <br>
+      <$$ Paginator handles $$> <br>
        <#$$ SearchHash $$#>
        <br>
        user logins removed : <$$$ rl <span></span> $$$><br>
@@ -285,10 +305,18 @@ if we are our experiences then we are both sides of them.
    </script>
 
    <script type="text/template" class="yote_template_definition" template_name="Entry_Schedule">
+    <??? 
+       ctx.vars.scheduled_times = $.yote.wrap_list( { 
+           array : 'scheduled_times',
+           obj   : ctx.vars._,
+           ctx   : ctx
+       } );
+    ???>
+
      <table border=1><tr>  <th>Scheduled Time</th> <th>Delete</th> </tr>
-       <@ Cron_Schedule_Row _@scheduled_times 2 @>
+       <$$ listpaginate Cron_Schedule_Row scheduled_times $$>
      </table>
-     <$$ Paginator _@scheduled_times $$>
+     <$$ Paginator scheduled_times $$>
      <$$$ new_schedule_time <input type="datetime-local"> $$$>
      <$$$ new_schedule <button type="button">Schedule Time</button> $$$>
      <?
@@ -298,6 +326,8 @@ if we are our experiences then we are both sides of them.
          } );
      ?>
    </script>
+
+   <script type="text/template" class="yote_template_definition" template_name="checkbox"></script>
 
    <script type="text/template" class="yote_template_definition" template_name="Cron_Row">
      <tr> <td> <$$ edit _ name $$> </td>  <td> <$$ checkbox _ enabled $$> </td>  
@@ -325,13 +355,12 @@ if we are our experiences then we are both sides of them.
    <script type="text/template" class="yote_template_definition" template_name="Cron">
      <???
         ctx.vars.cron = ctx._app_.cron();
-        var cron_pag = $.yote.templates.list_paginator( {
-            array : ctx.vars.cron.get( 'entries' ), 
+        ctx.vars.cron_pag = $.yote.templates.wrap_list( {
+            array : ctx.vars.cron.get( 'entries' ).to_list(), 
             size  : 5,
             initial_start : 0,
             ctx : ctx,
         } );
-alert(cron_pag.to_list());
      ???>
      <A NAME="Cron">
        <H3>Crons</H3>
@@ -339,9 +368,9 @@ alert(cron_pag.to_list());
            <th>Script</th>   <th>Next Run</th>  <th>Repeat</th>
            <th>Schedule</th> <th>Delete</th>
          </tr>
-         <$$ listpaginate Cron_Row cron@entries $$>
+         <$$ listpaginate Cron_Row cron_pag $$>
        </table>
-       <$$ Paginator cron@entries $$> <br>
+       <$$ Paginator cron_pag $$> <br>
 
        <$$$ newbutton <button type="button">Add Cron</button>$$$>
        <?
@@ -403,38 +432,21 @@ alert(cron_pag.to_list());
     <A NAME="App">
     <H3>Applications Installed</H3>
     <???
-        $.yote.debug = true;
-        var root = $.yote.fetch_root();
-        ctx.vars.root = root;
-        var app_count = root.count( '_apps' );
-        var pag = $.yote.hash_paginator( {
-            obj  : root,
-            hash : 
-            size  : 5,
-            initial_start : 0,
-            ctx : ctx,
+        ctx.vars.apps = $.yote.wrap_hash( { 
+            hash  : '_apps',
+            obj   : ctx._app_,
+            ctx   : ctx,
+            size  : 3
         } );
-
-root.wrap_hash( { collection_name : '_apps', cache_key : 'foo', wrap_key : 'bar' }, app_count );
-
-        var app_hash = pag.to_hash();
-        var apps = {};
-        for( var k in app_hash ) {
-            if( app_hash[ k ] ) 
-                apps[ k ] = app_hash[ k ];
-        }
-        console.log( [ 'APPS', apps, pag, app_hash, app_count, root ] );
-        ctx.vars.apps = apps;
-        $.yote.debug = false;
     ???>
     <table border=1><tr>  <th>Name</th>     <th>Host</th>   <th>Host URL</th>
         <th>Number of Users</th>   <th>Email Settings</th> 
         <th>Attached Objects</th>  <th>Reset</th>
       </tr>
-      <% App_Row %apps 3 %>
+      <$$ hashpaginate App_Row apps $$>
     </table>
-    <$$ Paginator %apps $$> <br>
-    <#$$ SearchHash $$#>
+    <$$ Paginator apps $$> <br>
+    <$$ SearchHash apps keys $$>
     <???
         var pc = $.yote.fetch_root().count( '_purged_apps' );
         if( pc > 0 ) {
