updates to the templates to be stand alone. removed <@ ... @> and <% .. %> and added default templates for paginated lists and hashes

--- a/yote_root/html/yote/admin.html
+++ b/yote_root/html/yote/admin.html
@@ -230,7 +230,7 @@ $.yote.debug = true;
         <$$ hashpaginate User_Row handles $$>
       </table>
       <$$ Paginator handles $$> <br>
-       <#$$ SearchHash $$#>
+       <$$ SearchHash handles values handle email $$>
        <br>
        user logins removed : <$$$ rl <span></span> $$$><br>
        <$$$ purge_users <button type="button">Flush all removed users</button> $$$>
